Bug 701793: check we are within buffer before comparing buffer contents.

Fixes:
    ./sanbin/gs -sOutputFile=tmp -sDEVICE=mj700v2c ../bug-701793.pdf